Import patches-unapplied version 1.3.0+dfsg-4exp to debian/experimental
Imported using git-ubuntu import.

Changelog parent: 56847a93cc2ebc82724b98cac737cf5b89bb697b

New changelog entries:
  * install forgotten /etc/qemu-ifdown (dummy, but qemu complains without it)
  * install virtfs-proxy-helper in qemu-system not qemu-utils
  * add qemu-kvm.NEWS mentioning transition from qemu-kvm to qemu-system-x86_64.
  * do not pass -cpu kvm64 to qemu in kvm wrapper script, previous qemu-kvm
    used qemu64 cpu instead - the same as new qemu uses.
  * install kvm wrapper on x86 only, and install it as /usr/bin/kvm not
    /usr/bin/kvm/kvm (Closes: #698736).
  * stop shipping /usr/share/qemu/vapic.bin link (qemu uses kvmvapic.bin)
  * stop shipping /usr/share/qemu/vgabios.bin link (qemu uses vgabios-*.bin)
  * enable all guest audio devices
  * add breaks/replaces/provides/conflicts with kvm (very old package),
    qemu-kvm, and ubuntu's qemu-common.
  * stop caring about old (pre-squeeze) qemu

--- a/debian/control
+++ b/debian/control
@@ -98,8 +98,8 @@ Package: qemu-keymaps
 Architecture: all
 Multi-Arch: foreign
 Depends: ${misc:Depends}
-Breaks: qemu (<< 0.11.0-2), qemu-system (<< 0.12.4+dfsg-4)
-Replaces: qemu (<< 0.11.0-2), qemu-system (<< 0.12.4+dfsg-4)
+Breaks: qemu-common (<< 1.2.0.dfsg-1)
+Replaces: qemu-common (<< 1.2.0.dfsg-1)
 Description: QEMU keyboard maps
  QEMU is a fast processor emulator: currently the package supports
  ARM, CRIS, i386, M68k (ColdFire), MicroBlaze, MIPS, PowerPC, SH4,
@@ -121,10 +121,12 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  seabios (>= 1.7.2~),
  vgabios (>= 0.6c-3~),
 Recommends: qemu-utils, iproute
-Breaks: qemu (<< 0.11.0-2),
+Conflicts: kvm
+Provides: qemu-kvm, kvm
+Breaks: qemu-kvm (<< 1.2.0.dfsg-1), qemu-common (<< 1.2.0.dfsg-1), kvm,
 # iproute before 20110315 were unable to deal with bridge (set master device)
   iproute (<< 20110315-1)
-Replaces: qemu (<< 0.11.0-2)
+Replaces: qemu-kvm (<< 1.2.0.dfsg-1), qemu-common (<< 1.2.0.dfsg-1), kvm
 Suggests: samba, vde2
 Description: QEMU full system emulation binaries
  QEMU is a fast processor emulator: currently the package supports
@@ -138,22 +140,10 @@ Description: QEMU full system emulation binaries
  It can also be used to provide virtual hosting of several virtual
  machines on a single server.
 
-Package: qemu-kvm
-Architecture: i386 amd64
-Multi-Arch: foreign
-Depends: qemu-system (>= ${source:Version})
-Provides: kvm
-Section: oldlibs
-Description: QEMU Full virtualization on x86 hardware (transitional package)
- QEMU is a fast processor emulator.  This package is a transitional
- package from old qemu-kvm to qemu-system.  It is safe to remove it.
-
 Package: qemu-user
 Architecture: amd64 arm armel armhf hppa i386 ia64 mips mipsel powerpc ppc64 s390x sparc sparc64
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Breaks: qemu (<< 0.11.0-2)
-Replaces: qemu (<< 0.11.0-2)
 Suggests: sudo
 Description: QEMU user mode emulation binaries
  QEMU is a fast processor emulator: currently the package supports
@@ -186,9 +176,6 @@ Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: sharutils
 Suggests: debootstrap
-Conflicts: kvm (= 85+dfsg-4.1)
-Breaks: qemu (<< 0.11.0-2), qemu-user (<< 0.11.1-2)
-Replaces: qemu (<< 0.11.0-2), qemu-user (<< 0.11.1-2)
 Description: QEMU utilities
  QEMU is a fast processor emulator: currently the package supports
  ARM, CRIS, i386, M68k (ColdFire), MicroBlaze, MIPS, PowerPC, SH4,
@@ -199,4 +186,13 @@ Description: QEMU utilities
   * qemu-img: QEMU disk image utility
   * qemu-io:  QEMU disk exerciser
   * qemu-nbd: QEMU disk network block device server
-  * virtfs-proxy-helper: QEMU proxy helper for virtfs (aka 9pfs)
+
+Package: qemu-kvm
+Architecture: i386 amd64
+Multi-Arch: foreign
+Depends: qemu-system (>= ${source:Version})
+Section: oldlibs
+Description: QEMU Full virtualization on x86 hardware (transitional package)
+ QEMU is a fast processor emulator.  This package is a transitional
+ package from old qemu-kvm to qemu-system.  It is safe to remove it.
+
