Import patches-unapplied version 1.3.0+dfsg-5expubuntu2 to ubuntu/raring-proposed
Imported using git-ubuntu import.

Changelog parent: 6dc0a13293926d4f58f891948d4b24cdc23785e9

New changelog entries:
  * Enable spice.
  * Address lintian warning by adding ${misc:Depends} to qemu-common and
    qemu-kvm.

--- a/debian/control
+++ b/debian/control
@@ -48,7 +48,7 @@ Build-Depends: debhelper (>= 9),
 # --enable-seccomp
 # libseccomp-dev (>> 1.0.0) [linux-amd64 linux-i386],
 # --enable-spice
-# libspice-server-dev (>= 0.12.2~) [amd64 i386],
+ libspice-server-dev (>= 0.12.2~) [amd64 i386],
 # --enable-usb-redir
 # libusbredirparser-dev (>= 0.6~) [linux-any],
 # --enable-vde
@@ -412,7 +412,7 @@ Description: Guest-side qemu-system agent
 Package: qemu-kvm
 Architecture: i386 amd64 armhf armel powerpc sparc
 Multi-Arch: foreign
-Depends: qemu-system-x86 (>= ${source:Version})
+Depends: ${misc:Depends}, qemu-system-x86 (>= ${source:Version})
 Section: oldlibs
 Description: QEMU Full virtualization on x86 hardware (transitional package)
  QEMU is a fast processor emulator.  This package is a transitional
@@ -420,7 +420,7 @@ Description: QEMU Full virtualization on x86 hardware (transitional package)
 
 Package: qemu-common
 Architecture: all
-Depends: qemu-keymaps
+Depends: ${misc:Depends}, qemu-keymaps
 Section: oldlibs
 Description: dummy transitional package from qemu-common to qemu-keymaps
  This transitional package helps users transition from the qemu-common package
