Import patches-unapplied version 1.4.0+dfsg-1exp to debian/experimental
Imported using git-ubuntu import.

Changelog parent: e4a8329db2a5e882203aac24b8acfad286445ee7

New changelog entries:
  [ Michael Tokarev ]
  * 1.4.0 final release
  * remove fix-virtio-net-for-win-guests.patch (upstream now has better fix)
  * fix debian/control arch fields. Build-Depends: foo [bar]
    means foo will be selected for build on LINUX-bar, not any-bar.
    So stop using [bar], always use [linux-bar] or [any-bar],
    as appropriate.  This fix spice and xen (non)selection on
    kfreebsd-{i386,amd64}.
  * fix manpage "links" generation (man qemu-system-* was broken)
  * change Vcs fields to point to anonscm.debian.org (lintian)
  * add a check for (vlc) container to qemu-system-x86 initscript
  [ Steve Langasek ]
  * Pass --enable-uname-release=2.6.32 for the user emulation builds, so that
    we have a sensible baseline kernel value regardless of what the
    underlying host kernel is.  This makes eglibc happier when running under
    emulation on a very old kernel for instance (whose host syscall ABI has
    nothing to do with what emulated syscalls are supported), and probably
    also lets us steer clear for the moment of code that has problem with
    the new kernel upstream versioning convention.  LP: #921078.

--- a/debian/control
+++ b/debian/control
@@ -37,6 +37,7 @@ Build-Depends: debhelper (>= 9),
 # --enable-fdt
  libfdt-dev,
 # --enable-vnc-tls
+# --enable-vnc-ws
  libgnutls-dev,
 # --enable-libiscsi
  libiscsi-dev,
@@ -52,16 +53,16 @@ Build-Depends: debhelper (>= 9),
  libsdl1.2-dev (>> 1.2.1),
 # --enable-seccomp	linux-amd64|linux-i386
  libseccomp-dev (>> 1.0.0) [linux-amd64 linux-i386],
-# --enable-spice	*-amd64|*-i386
- libspice-server-dev (>= 0.12.2~) [amd64 i386],
+# --enable-spice	linux-amd64|linux-i386
+ libspice-server-dev (>= 0.12.2~) [linux-amd64 linux-i386],
 # --enable-usb-redir	linux-*
  libusbredirparser-dev (>= 0.6~) [linux-any],
 # --enable-vde
  libvdeplug2-dev,
 # needed for sdl
  libx11-dev,
-# --enable-xen	*-amd64|*-i386
- libxen-dev [amd64 i386],
+# --enable-xen	linux-amd64|linux-i386
+ libxen-dev [linux-amd64 linux-i386],
 # XXX need to check minimum linux-headers requiriment
  linux-libc-dev (>= 2.6.34) [linux-any],
 # --enable-uuid
@@ -81,8 +82,8 @@ Build-Depends: debhelper (>= 9),
 Build-Conflicts: oss4-dev
 Standards-Version: 3.9.3
 Homepage: http://www.qemu.org/
-Vcs-Browser: http://git.debian.org/?p=pkg-qemu/qemu.git
-Vcs-Git: git://git.debian.org/git/pkg-qemu/qemu.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-qemu/qemu.git
+Vcs-Git: git://anonscm.debian.org/pkg-qemu/qemu.git
 
 Package: qemu
 Architecture: amd64 arm armel armhf hppa i386 ia64 kfreebsd-amd64 kfreebsd-i386 mips mipsel powerpc ppc64 s390x sparc sparc64
@@ -392,7 +393,7 @@ Description: Guest-side qemu-system agent
 Package: qemu-kvm
 Architecture: i386 amd64
 Multi-Arch: foreign
-Depends: qemu-system-x86 (>= ${source:Version})
+Depends: ${misc:Depends}, qemu-system-x86 (>= ${source:Version})
 Section: oldlibs
 Description: QEMU Full virtualization on x86 hardware (transitional package)
  QEMU is a fast processor emulator.  This package is a transitional
