--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: qemu
 Section: misc
 Priority: optional
-Maintainer: Debian QEMU Team <pkg-qemu-devel@lists.alioth.debian.org>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+XSBC-Original-Maintainer: Debian QEMU Team <pkg-qemu-devel@lists.alioth.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>,
 	Riku Voipio <riku.voipio@iki.fi>,
 	Vagrant Cascadian <vagrant@debian.org>,
@@ -39,8 +40,6 @@ Build-Depends: debhelper (>= 9),
 # --enable-vnc-tls
 # --enable-vnc-ws
  libgnutls-dev,
-# --enable-libiscsi
- libiscsi-dev,
 # --enable-curses
  libncurses5-dev,
 # --with-system-pixman
@@ -55,10 +54,6 @@ Build-Depends: debhelper (>= 9),
  libseccomp-dev (>> 1.0.0) [linux-amd64 linux-i386],
 # --enable-spice	linux-amd64|linux-i386
  libspice-server-dev (>= 0.12.2~) [linux-amd64 linux-i386],
-# --enable-usb-redir	linux-*
- libusbredirparser-dev (>= 0.6~) [linux-any],
-# --enable-vde
- libvdeplug2-dev,
 # needed for sdl
  libx11-dev,
 # --enable-xen	linux-amd64|linux-i386
@@ -73,14 +68,14 @@ Build-Depends: debhelper (>= 9),
  zlib1g-dev,
 # other optional features we enable
 # --enable-vnc
-# --enable-vnc-jpeg
 # --enable-vnc-png
 # --enable-kvm		linux-*
 # --enable-vhost-net	linux-*	# is it really linux-specific?
 ##--enable-glusterfs todo
-##--enable-rbd todo
+# --enable-rbd
+ librados-dev, librbd-dev,
 Build-Conflicts: oss4-dev
-Standards-Version: 3.9.3
+Standards-Version: 3.9.4
 Homepage: http://www.qemu.org/
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-qemu/qemu.git
 Vcs-Git: git://anonscm.debian.org/pkg-qemu/qemu.git
@@ -113,6 +108,8 @@ Package: qemu-keymaps
 Architecture: all
 Multi-Arch: foreign
 Depends: ${misc:Depends}
+Breaks: qemu-system (<< 0.12.4+dfsg-4), qemu-common (<< 1.2.0.dfsg-1)
+Replaces: qemu-system (<< 0.12.4+dfsg-4), qemu-common (<< 1.2.0.dfsg-1)
 Description: QEMU keyboard maps
  QEMU is a fast processor emulator: currently the package supports
  ARM, CRIS, i386, M68k (ColdFire), MicroBlaze, MIPS, PowerPC, SH4,
@@ -147,7 +144,7 @@ Description: QEMU full system emulation binaries
 Package: qemu-system-common
 Architecture: amd64 arm armel armhf hppa i386 ia64 kfreebsd-amd64 kfreebsd-i386 mips mipsel powerpc ppc64 s390x sparc sparc64
 Multi-Arch: foreign
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}, udev, acl
 Breaks:
 # qemu-system before qemu-system-split
   qemu-system (<< 1.3.0+dfsg-5),
@@ -156,6 +153,7 @@ Breaks:
 # iproute before 20110315 were unable to deal with bridge (set master device)
   iproute (<< 20110315-1)
 Replaces:
+  qemu (<< 1.3.0+dfsg-5),
   qemu-system (<< 1.3.0+dfsg-5),
   qemu-utils (<< 1.3.0+dfsg-4),
 Description: QEMU full system emulation binaries (common files)
@@ -201,9 +199,15 @@ Architecture: amd64 arm armel armhf hppa i386 ia64 kfreebsd-amd64 kfreebsd-i386 
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends},
  qemu-system-common (>= ${source:Version}), qemu-keymaps (>= ${source:Version}),
-Provides: ${sysprovides:arm}
-Breaks: qemu-system (<< 1.3.0+dfsg-5)
-Replaces: qemu-system (<< 1.3.0+dfsg-5)
+Provides: ${sysprovides:arm}, qemu-kvm, kvm
+Breaks:
+  qemu-common (<< 1.3.0+dfsg-5),
+  qemu-system (<< 1.3.0+dfsg-5),
+  qemu-kvm (<< 1.2.0.dfsg-1),
+Replaces:
+  qemu-common (<< 1.3.0+dfsg-5),
+  qemu-system (<< 1.3.0+dfsg-5),
+  qemu-kvm (<< 1.2.0.dfsg-1),
 Recommends: qemu-utils
 Suggests: samba, vde2
 Description: QEMU full system emulation binaries (arm)
@@ -247,10 +251,9 @@ Architecture: amd64 arm armel armhf hppa i386 ia64 kfreebsd-amd64 kfreebsd-i386 
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends},
  qemu-system-common (>= ${source:Version}), qemu-keymaps (>= ${source:Version}),
- openbios-ppc (>= 1.0+svn1060), openhackware
-Provides: ${sysprovides:ppc}
-Breaks: qemu-system (<< 1.3.0+dfsg-5)
-Replaces: qemu-system (<< 1.3.0+dfsg-5)
+Provides: ${sysprovides:ppc}, qemu-kvm, kvm
+Breaks: qemu-system (<< 1.3.0+dfsg-5), qemu-kvm (<< 1.2.0.dfsg-1), qemu-common (<< 1.2.0.dfsg-1)
+Replaces: qemu-system (<< 1.3.0+dfsg-5), qemu-kvm (<< 1.2.0.dfsg-1), qemu-common (<< 1.2.0.dfsg-1)
 Recommends: qemu-utils
 Suggests: samba, vde2
 Description: QEMU full system emulation binaries (ppc)
@@ -271,10 +274,15 @@ Architecture: amd64 arm armel armhf hppa i386 ia64 kfreebsd-amd64 kfreebsd-i386 
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends},
  qemu-system-common (>= ${source:Version}), qemu-keymaps (>= ${source:Version}),
- openbios-sparc (>= 1.0+svn1060)
-Provides: ${sysprovides:sparc}
-Breaks: qemu-system (<< 1.3.0+dfsg-5)
-Replaces: qemu-system (<< 1.3.0+dfsg-5)
+Provides: ${sysprovides:sparc}, qemu-kvm, kvm
+Breaks:
+  qemu-common (<< 1.3.0+dfsg-5),
+  qemu-system (<< 1.3.0+dfsg-5),
+  qemu-kvm (<< 1.2.0.dfsg-1),
+Replaces:
+  qemu-common (<< 1.3.0+dfsg-5),
+  qemu-system (<< 1.3.0+dfsg-5),
+  qemu-kvm (<< 1.2.0.dfsg-1),
 Recommends: qemu-utils
 Suggests: samba, vde2
 Description: QEMU full system emulation binaries (sparc)
@@ -299,16 +307,18 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
 Provides: ${sysprovides:x86}, qemu-kvm, kvm
 Conflicts: kvm
 Breaks:
+  qemu-common (<< 1.3.0+dfsg-5),
   qemu-system (<< 1.3.0+dfsg-5),
   qemu-kvm (<< 1.2.0.dfsg-1),
   kvm,
 # older libvirt (eg 0.10.2.x) is known broken with qemu >= 1.3
   libvirt0 (<< 1.0)
 Replaces:
+  qemu-common (<< 1.3.0+dfsg-5),
   qemu-system (<< 1.3.0+dfsg-5),
   qemu-kvm (<< 1.2.0.dfsg-1),
   kvm
-Recommends: qemu-utils
+Recommends: qemu-utils, cpu-checker
 Suggests: samba, vde2
 Description: QEMU full system emulation binaries (x86)
  QEMU is a fast processor emulator: currently the package supports
@@ -330,6 +340,8 @@ Package: qemu-user
 Architecture: amd64 arm armel armhf hppa i386 ia64 mips mipsel powerpc ppc64 s390x sparc sparc64
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Breaks: qemu-kvm (<< 1.2.0.dfsg-1)
+Replaces: qemu-kvm (<< 1.2.0.dfsg-1)
 Suggests: sudo
 Description: QEMU user mode emulation binaries
  QEMU is a fast processor emulator: currently the package supports
@@ -362,6 +374,8 @@ Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Recommends: sharutils
 Suggests: debootstrap
+Breaks: qemu-user (<< 0.11.1-2), qemu-kvm (<< 1.2.0.dfsg-1)
+Replaces: qemu-user (<< 0.11.1-2), qemu-kvm (<< 1.2.0.dfsg-1)
 Description: QEMU utilities
  QEMU is a fast processor emulator: currently the package supports
  ARM, CRIS, i386, M68k (ColdFire), MicroBlaze, MIPS, PowerPC, SH4,
@@ -391,8 +405,11 @@ Description: Guest-side qemu-system agent
  qemu virtual machine.  It is not used on the host.
 
 Package: qemu-kvm
-Architecture: i386 amd64
+Architecture: i386 amd64 armhf armel powerpc sparc
 Multi-Arch: foreign
+Conflicts: qemu-kvm-spice
+Replaces: qemu-kvm-spice
+Provides: qemu-kvm-spice
 Depends: ${misc:Depends}, qemu-system-x86 (>= ${source:Version})
 Section: oldlibs
 Description: QEMU Full virtualization on x86 hardware (transitional package)
@@ -402,3 +419,11 @@ Description: QEMU Full virtualization on x86 hardware (transitional package)
  Please note that old qemu-kvm configuration files (in /etc/kvm/) are
  no longer used.
 
+Package: qemu-common
+Architecture: all
+Depends: ${misc:Depends}, qemu-keymaps
+Section: oldlibs
+Description: dummy transitional package from qemu-common to qemu-keymaps
+ This transitional package helps users transition from the qemu-common package
+ to the qemu-keymaps package.  Once this package and its dependencies are
+ installed you can safely remove it.
