--- a/debian/control
+++ b/debian/control
@@ -55,6 +55,7 @@ Build-Depends: debhelper (>= 9),
  libseccomp-dev (>> 1.0.0) [linux-amd64 linux-i386],
 # --enable-spice	linux-amd64|linux-i386
  libspice-server-dev (>= 0.12.2~) [linux-amd64 linux-i386],
+ libspice-protocol-dev (>= 0.12.3~) [linux-amd64 linux-i386],
 # --enable-usb-redir	linux-*
  libusbredirparser-dev (>= 0.6~) [linux-any],
 # --enable-vde
@@ -80,7 +81,7 @@ Build-Depends: debhelper (>= 9),
 ##--enable-glusterfs todo
 ##--enable-rbd todo
 Build-Conflicts: oss4-dev
-Standards-Version: 3.9.3
+Standards-Version: 3.9.4
 Homepage: http://www.qemu.org/
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-qemu/qemu.git
 Vcs-Git: git://anonscm.debian.org/pkg-qemu/qemu.git
@@ -147,6 +148,7 @@ Description: QEMU full system emulation binaries
 Package: qemu-system-common
 Architecture: amd64 arm armel armhf hppa i386 ia64 kfreebsd-amd64 kfreebsd-i386 mips mipsel powerpc ppc64 s390x sparc sparc64
 Multi-Arch: foreign
+Pre-Depends: adduser
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Breaks:
 # qemu-system before qemu-system-split
@@ -247,7 +249,7 @@ Architecture: amd64 arm armel armhf hppa i386 ia64 kfreebsd-amd64 kfreebsd-i386 
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends},
  qemu-system-common (>= ${source:Version}), qemu-keymaps (>= ${source:Version}),
- openbios-ppc (>= 1.0+svn1060), openhackware
+ openbios-ppc (>= 1.0+svn1060), openhackware, qemu-slof
 Provides: ${sysprovides:ppc}
 Breaks: qemu-system (<< 1.3.0+dfsg-5)
 Replaces: qemu-system (<< 1.3.0+dfsg-5)
@@ -395,6 +397,7 @@ Architecture: i386 amd64
 Multi-Arch: foreign
 Depends: ${misc:Depends}, qemu-system-x86 (>= ${source:Version})
 Section: oldlibs
+Priority: extra
 Description: QEMU Full virtualization on x86 hardware (transitional package)
  QEMU is a fast processor emulator.  This package is a transitional
  package from old qemu-kvm to qemu-system-x86.  It is safe to remove it.
