--- a/debian/rules
+++ b/debian/rules
@@ -219,10 +219,11 @@ endif
 
 	dh_install --list-missing
 	dh_installdocs
+	dh_installman
 	dh_installchangelogs Changelog
 	dh_installudev
 ifneq ($(filter $(DEB_HOST_ARCH),amd64 i386),)
-	dh_installinit -pqemu-system-x86 --no-restart-on-upgrade -u start 20 S .
+	dh_installinit -pqemu-system-x86 --no-restart-on-upgrade -- start 20 S .
 endif
 	dh_installinit -pqemu-guest-agent
 	dh_link
