Import patches-unapplied version 1.5.0+dfsg-2ubuntu1 to ubuntu/saucy-proposed
Imported using git-ubuntu import.

Changelog parent: 27f3f2c3e975bd30f4cff24f87a982722472942c

New changelog entries:
  * Merge 1.5.0+dfs-2 from debian unstable.  Remaining changes:
    - debian/control
      * update maintainer
      * remove libiscsi, usb-redir, vde, vnc-jpeg, and libssh2-1-dev
        from build-deps
      * enable rbd
      * add qemu-system and qemu-common B/R to qemu-keymaps
      * add D:udev, R:qemu, R:qemu-common and B:qemu-common to
        qemu-system-common
      * qemu-system-arm, qemu-system-ppc, qemu-system-sparc:
        - add qemu-kvm to Provides
        - add qemu-common, qemu-kvm, kvm to B/R
        - remove openbios-sparc from qemu-system-sparc D
      * qemu-system-x86:
        - add qemu-common to Breaks/Replaces.
        - add cpu-checker to Recommends.
      * qemu-user: add B/R:qemu-kvm
      * qemu-kvm:
        - add armhf armel powerpc sparc to Architecture
        - C/R/P: qemu-kvm-spice
      * add qemu-common package
      * drop qemu-slof which is not packaged in ubuntu
    - add qemu-system-common.links for tap ifup/down scripts and OVMF link.
    - qemu-system-x86.links:
      * remove pxe rom links which are in kvm-ipxe
      * add symlink for kvm.1 manpage
    - debian/rules
      * add kvm-spice symlink to qemu-kvm
      * call dh_installmodules for qemu-system-x86
      * update dh_installinit to install upstart script
      * run dh_installman (Closes: #709241) (cherrypicked from 1.5.0+dfsg-2)
    - Add qemu-utils.links for kvm-* symlinks.
    - Add qemu-system-x86.qemu-kvm.upstart and .default
    - Add qemu-system-x86.modprobe to set nesting=1
    - Add qemu-system-common.preinst to add kvm group
    - qemu-system-common.postinst: remove bad group acl if there, then have
      udev relabel /dev/kvm.
    - Dropped patches:
      * 0001-fix-wrong-output-with-info-chardev-for-tcp-socket.patch
    - Kept patches:
      * expose_vms_qemu6

--- a/debian/rules
+++ b/debian/rules
@@ -175,6 +175,10 @@ ifeq ($(DEB_HOST_ARCH_OS),linux)
 # How about a manpage for it?
 ifneq ($(filter $(DEB_HOST_ARCH),amd64 i386),)
 	dh_install -pqemu-system-x86 debian/kvm /usr/bin/
+	mkdir -p debian/qemu-kvm/usr/bin
+	ln -s kvm debian/qemu-kvm/usr/bin/kvm-spice
+	ln -s qemu-system-x86_64 debian/qemu-kvm/usr/bin/qemu-system-x86_64-spice
+	dh_installmodules -pqemu-system-x86
 endif
 
 # virtfs-proxy-helper is linux-specific
@@ -223,7 +227,7 @@ endif
 	dh_installchangelogs Changelog
 	dh_installudev
 ifneq ($(filter $(DEB_HOST_ARCH),amd64 i386),)
-	dh_installinit -pqemu-system-x86 --no-restart-on-upgrade -- start 20 S .
+	dh_installinit -pqemu-system-x86 --no-restart-on-upgrade --error-handler=true --name=qemu-kvm
 endif
 	dh_installinit -pqemu-guest-agent
 	dh_link
