[PATCH 43/69] add hw/omap3_mmc.c
Gbp-Pq: linaro-patches-1.5.0/0043-add-hw-omap3_mmc.c.patch.

--- a/hw/sd/Makefile.objs
+++ b/hw/sd/Makefile.objs
@@ -5,4 +5,5 @@ common-obj-$(CONFIG_SDHCI) += sdhci.o
 
 obj-$(CONFIG_MILKYMIST) += milkymist-memcard.o
 obj-$(CONFIG_OMAP) += omap_mmc.o
+obj-$(CONFIG_OMAP) += omap3_mmc.o
 obj-$(CONFIG_PXA2XX) += pxa2xx_mmci.o
