Import patches-unapplied version 1.5.0+dfsg-3 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 27f3f2c3e975bd30f4cff24f87a982722472942c

New changelog entries:
  * fix sections: misc => otherosfs
  * remove obsolete conffiles (kvm-ifup, kvm-ifdown, target-x86_64.conf)
    from /etc/kvm/ in qemu-kvm (Closes: #710328)
  * rework debian/rules a bit, to build various bits depending on
    which packages are requested, not depending on ad-hoc host/arch
    logic
  * do not fail at install if kvm module loading failed on x86 or
    if modprobe isn't installed (Closes: #710496)
  * also suggest kmod to be able to load x86 kvm modules
  * suggest sgabios for qemu-system-x86 and put a symlink to sgabios.bin
    (Closes: #696985)
  * add rules to build just one of arch/indep parts, to make
    buildd log scanner happier (E-binary-arch-produces-all)
  * use verbose build by default (V=1) and let it to be overridden

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: qemu
-Section: misc
+Section: otherosfs
 Priority: optional
 Maintainer: Debian QEMU Team <pkg-qemu-devel@lists.alioth.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>,
@@ -319,7 +319,7 @@ Replaces:
   qemu-kvm (<< 1.2.0.dfsg-1),
   kvm
 Recommends: qemu-utils
-Suggests: samba, vde2
+Suggests: samba, vde2, kmod, sgabios
 Description: QEMU full system emulation binaries (x86)
  QEMU is a fast processor emulator: currently the package supports
  i386 and x86-64 emulation. By using dynamic translation it achieves
